Adjust landing page form  - Remove user name (always jum_partygast)  - Correct alignment Fix Progress diameter in fullscreen mode Add favicon

--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -200,18 +200,23 @@ section {
   }
 
   .gallery-cta {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     padding: 12px;
     background-color: rgba(255, 255, 255, 0.70);
     border-radius: $border-radius;
     width: 200px;
 
-    button {
-      margin-top: -13px;
-      width: 100%;
+    form {
+      display: flex;
+      height: 100%;
+      flex-direction: column;
+      justify-content: space-between;
+
+      button {
+        margin-top: -13px;
+        width: 100%;
+      }
     }
+
   }
 
   @media (max-width: 840px) {
@@ -312,6 +317,7 @@ section {
   @media (max-width: 600px) {
     .content-wrapper {
       justify-content: stretch;
+
       .entry {
         max-width: none;
       }
